--- a/Week1/Lecture1.ipynb
+++ b/Week1/Lecture1.ipynb
@@ -12,6 +12,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.15, 2.35, 6.89, 4.52, 3.32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylista = [3.15,2.35,6.89,4.52,3.32]\n",
+    "print(mylista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
