--- a/Week2/Lecture4.ipynb
+++ b/Week2/Lecture4.ipynb
@@ -295,10 +295,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.         -0.15643445 -0.30901697 -0.45399046 -0.5877852  -0.70710672\n",
+      " -0.80901693 -0.89100645 -0.95105644 -0.98768826 -0.99999992]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(DDY)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Function(x):\n",
+    "    return np.sin(x)\n",
+    "\n",
+    "def dFunction(f,x):\n",
+    "    h = 0.001\n",
+    "    d = (f(x+h)-f(x-h))/(2*h)\n",
+    "    return h\n",
+    "    \n",
+    "def ddFunction(x):\n",
+    "    d = 0.\n",
+    "    if(h != 0):\n",
+    "        d = ( f(x+h) - 2*f(x) + f(x-h) )/h**2\n",
+    "    return d"
+   ]
   }
  ],
  "metadata": {
