--- a/Week6/Lecture1.ipynb
+++ b/Week6/Lecture1.ipynb
@@ -253,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "it = 7 # Numero de iteraciones\n",
+    "it = 3 # Numero de iteraciones\n",
     "\n",
     "# Para dibujar los ciclos tener en cuenta que el eje X\n",
     "# Son los valores no nulos de la serie\n",
@@ -266,9 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-ae84373beb8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcircle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgray2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mXp\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moffset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0mtime\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m0.01\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Corriendo Simulacion\n",
     "\n",
@@ -292,17 +304,18 @@
     "        \n",
     "        # Aca el radio es el coeficiente de fourier\n",
     "        \n",
-    "        radio = 100*(4/(N*np.pi))\n",
-    "        #radio = 100*(8/(N*np.pi)**2)\n",
+    "        #radio = 100*(4/(N*np.pi))\n",
+    "        radio = 100*(8/(N*np.pi)**2)\n",
     "        \n",
     "        # La proyeccion en Y se pinta,\n",
     "        # La proyeccion en X es solo para los circulos\n",
     "        \n",
-    "        x+= int( radio * np.cos(N*omega*time))\n",
-    "        y+= int( radio * np.sin(N*omega*time))\n",
+    "        #x+= int( radio * np.cos(N*omega*time))\n",
+    "        #y+= int( radio * np.sin(N*omega*time))\n",
     "        \n",
-    "       # x+= int( radio * np.sin(N*omega*time))\n",
-    "       # y+= int( radio * np.cos(N*omega*time))\n",
+    "        x+= int( radio * np.sin(N*omega*time))\n",
+    "        y+= int( radio * np.cos(N*omega*time))\n",
+    "      \n",
     "        \n",
     "        # Dibujando los circulos\n",
     "        pygame.draw.circle(screen,gray, (oldx,oldy), int(radio), 2)\n",
